--- a/pages/index.css
+++ b/pages/index.css
@@ -24,9 +24,9 @@ a {
 }
 
 .header__span-accent {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: italic;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 60px;
   line-height: 72px;
   color: #3f96f3;
@@ -35,7 +35,7 @@ a {
 .header__title {
   max-width: 729px;
   margin: 183px 0 0 0;
-  font-family: "Inter";
+  font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
@@ -46,7 +46,7 @@ a {
 .header__description {
   margin: 28px 0 0 0;
   max-width: 683px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -70,7 +70,7 @@ a {
 
 .header__paragraph {
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -89,7 +89,7 @@ iframe {
 .nav {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -124,7 +124,7 @@ iframe {
   max-width: 580px;
   margin-bottom: 24px;
   margin-top: 0;
-  font-family: "Inter";
+  font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -135,7 +135,7 @@ iframe {
   max-width: 438px;
   margin-bottom: 80px;
   margin-top: 0;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -157,7 +157,7 @@ iframe {
   justify-content: space-between;
   margin-top: 24px;
   margin-bottom: 0;
-  font-family: "Inter";
+  font-family: "Inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
