New Update For My Project

--- a/pages/index.css
+++ b/pages/index.css
@@ -3,12 +3,15 @@
   max-width: 1600px;
   margin: auto;
   font-family: "Inter", Arial, sans-serif;
+  font-family: "Noto Serif", "Times New Roman", sans-serif;
   font-size: 16px;
   line-height: 20px;
+  color: #000;
 }
 
 a {
   text-decoration: none;
+  color: #000;
 }
 
 .header {
