--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,9 @@
   max-width: 1600px;
   margin: auto;
   font-family: "Inter", Arial, sans-serif;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
+  font-family: "Noto Serif", serif;
+  font-style: italic;
+  font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   color: #000;
