--- a/pages/index.css
+++ b/pages/index.css
@@ -160,3 +160,82 @@ iframe {
   font-size: 20px;
   line-height: 30px;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  height: 800px;
+  background-size: cover;
+  padding: 100px 0 120px;
+}
+.reservation__title {
+  margin: 0 0 80px;
+  text-align: center;
+  font-family: "Inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+.reservation__form {
+  margin: 0 auto;
+}
+.form {
+  max-width: 385px;
+}
+
+.form__fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  margin: 8px 0 32px;
+  border-radius: 4px;
+  color: #000;
+  border: 1px solid #838383;
+}
+.form__input::placeholder {
+  font-family: "Inter", arial, sans-serif;
+  font-size: 20px;
+  line-height: 20px;
+}
+.form__button {
+  width: 100%;
+  border: none;
+  padding: 20px 0;
+  margin-bottom: 32px;
+  margin-top: 8px;
+  background-color: #1878dc;
+  color: #fff;
+  border-radius: 4px;
+  font-family: "Inter", arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+.form__button:hover {
+  background-color: #3f96f3;
+}
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+.form__label {
+  font-family: "Inter", arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
