--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -22,6 +22,7 @@
 }
 .footer__list {
   margin: 0;
+  padding-left: 0;
 }
 .footer__list-item {
   margin: 0 0 16px 0;
@@ -30,10 +31,19 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.footer__list-item:last-of-type {
+  margin-bottom: 0;
+}
 .footer__social-link {
+  display: flex;
   text-decoration: none;
   color: #fff;
   gap: 10px;
+  transition: color 0.2s linear;
+}
+.footer__social-link:hover {
+  color: #c1c1c1;
 }
 
 .footer__copyright {
@@ -41,4 +51,10 @@
   font-size: 16px;
   line-height: 20px;
   margin-top: 108px;
+  margin-bottom: 0;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
 }
