--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -8,24 +8,26 @@
   line-height: 20px;
 }
 .nav__logo {
-  position: absolute;
+  position: relative;
   width: 105px;
   height: 39px;
-  top: 30px;
-  left: 30px;
+  left: -50px;
 }
 
 .nav__links {
   display: flex;
   column-gap: 20px;
-  position: absolute;
-  right: 80px;
-  top: 30px;
   list-style-type: none;
-  margin-top: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 .nav__link {
   text-decoration: none;
   color: #000;
+  transition: opacity 0.3s linear;
+}
+
+.nav__link:hover {
+  opacity: 50%;
 }
