--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -3,6 +3,8 @@
   background-image: url("../images/background_recipes.svg");
   padding: 100px 80px 215px;
   color: #fff;
+  background-position: center;
+  background-size: cover;
 }
 
 .recipes__title {
@@ -48,4 +50,6 @@
 
 .recipes__iframe {
   border: transparent;
+  width: 480px;
+  height: 273px;
 }
